Project BeanIO Change Log
=========================

Changes in version 3.0.0 (TBD)
-------------------------------------
* Requires JDK 1.7 or higher
* Removed support for ASM class rewriting
* Removed Spring framework support

Changes in version 2.1.0 (2014-09-06)
-------------------------------------
* Added 'ordinal' property to @Field and @Segment (gc0095)
* Fixed OSGi manifest attributes (gc0101)
* Improved date/calendar type handling performance when a pattern is set (gc0099)
* Fixed @Group collection handling (gc0103)
* Added 'record.unsatisfied' message keys (gc0107)
* Fixed reading field annotations for collections in a group (gc0111)

Changes in version 2.1.0.M2 (2013-11-15)
----------------------------------------
* Modified visibility of *BuilderSupport classes (gc0074)
* Fixed record termination configuration for Windows/DOS operating systems (gc0077)
* Added support for static record marshalling using a Marshaller (gc0079)
* Modified occursRef search logic to find the "nearest" field (gc0080)
* Added the 'lenientPadding' field attribute (gc0082)
* Fixed import of the same mapping file multiple times (gc0084)
* Fixed NumberTypeHandler.format() to call createDecimalFormat() (gc0085)
* Fixed bean identification for optional components (group/record/segment) that contain a record identifying field (gc0087)
* Fixed state maintenance (for Spring batch) for multiline records bound to a collection or map (gc0089)
* Fixed handling of nested segments with indeterminate length (gc0090)
* Fixed a jdk1.7 compile error in TreeNode (gc0088)
* Added support for accessing non-public fields and constructors
* Added support for annotating groups
* Added locale support for type handlers
* Added 'defaultValue' attribute to Field annotation
* Modified NumberTypeHandler to reuse a DecimalFormat instance when safe to do so
	
Changes in version 2.0.6 (2013-05-20)
------------------------------------