@@ -42,7 +42,7 @@ configurations {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.8.9'
+    testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.3.6'
     testRuntime group: 'commons-logging', name: 'commons-logging', version: '1.1.2'
     //emma group: 'emma', name: 'emma', version: '2.0.5312'
     //emma group: 'emma', name: 'emma', version: '2.0.5312' 
