@@ -1,4 +1,4 @@
-## Copyright 2010-2013 Kevin Seim
+## Copyright 2010-2014 Kevin Seim
 ##
 ## Licensed under the Apache License, Version 2.0 (the "License");
 ## you may not use this file except in compliance with the License.
@@ -90,6 +90,9 @@ org.beanio.useDefaultIfMissing=true
 
 ## whether non-public fields and methods can be made accessible
 org.beanio.allowProtectedAccess=true
+
+## whether to validate marshalled fields
+org.beanio.validateOnMarshal=false
 
 org.beanio.typeHandler.string-xml = org.beanio.types.StringTypeHandler
 org.beanio.typeHandler.int = org.beanio.types.IntegerTypeHandler
